--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,5 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "lumache"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
+authors = [{name = "Braden Tierney", email = "btt4001@med.cornell.edu"}]
 dynamic = ["version", "description"]
